--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
+    "@types/node": "^10.12.0",
     "@types/three": "^0.93.1",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
     "d3-force": "^1.1.2",
+    "raw-loader": "^0.5.1",
     "three": "^0.97.0",
     "ts-loader": "^5.2.1",
     "tslint": "^5.11.0",
     "tslint-config-jin": "^1.0.3",
+    "typescript": "^3.1.3",
+    "v3js": "^0.5.6",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   }
