--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tslint": "^5.11.0",
     "tslint-config-jin": "^1.0.3",
     "typescript": "^3.1.3",
+    "url-loader": "^1.1.2",
     "v3js": "^0.5.6",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
