--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@types/three": "^0.93.1",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.0",
     "d3-force": "^1.1.2",
+    "mitt": "^1.1.3",
     "raw-loader": "^0.5.1",
     "string-replace-loader": "^2.1.1",
+    "style-loader": "^0.23.1",
     "three": "^0.97.0",
     "ts-loader": "^5.2.1",
     "tslint": "^5.11.0",
